--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  margin: 0px;
+  width: 100%;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .logo {
@@ -41,3 +41,220 @@
   color: #888;
 }
 
+.contenitore {
+  padding: 1rem;
+  height: 100%;
+  min-height: 100vh;
+}
+
+.searchbox {
+  width: 20rem;
+  height: 1.5rem;
+  border-radius: 16px;
+  padding: 5px 10px;
+  border: 1px solid black;
+  font-size: 1.1rem;
+}
+
+.add {
+  position: fixed;
+  right: 40px;
+  top: 110px;
+  background-size: 100% 100%;
+  height: 40px;
+  width: 40px;
+  border: 0px;
+  padding: 0px;
+  background-color: #f5deb300;
+  cursor: pointer;
+  background-image: url('/src/assets/person_add.svg');
+}
+
+.add:hover {
+  transform: scale(1.1);
+}
+
+.contenuto {
+  padding: 1rem 0.5rem;
+  margin-top: 2rem;
+  border: 1px solid black;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-content {
+  background: white;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 800px;
+    width: 90%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.contenitoreClose {
+  display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.inputs {
+  display: flex;
+  align-items: center;
+  column-gap: 3rem;
+}
+
+.legenda {
+  display: flex;
+  justify-content: space-between;
+  height: 40px;
+  align-items: center;
+  background-color: whitesmoke;
+  border-radius: 16px;
+  font-weight: 900;
+}
+
+
+.oggetto {
+  display: flex;
+  justify-content: space-between;
+  height: 40px;
+  align-items: center;
+  margin: 5px 0px;
+  font-weight: 500;
+}
+
+.ams-bg {
+  background-color: #2a5fa8;
+  color: white; 
+}
+
+.sma-bg {
+  background-color: #fae711;
+  color: black; 
+}
+
+.elemento {
+  flex: 1;
+    font-size: 1.3rem;
+    padding: 0;
+    border: 0;
+    text-align: center;
+}
+
+.buttons {
+  display: flex;
+    position: fixed;
+    right: 35px;
+    width: 100px;
+    column-gap: 10px;
+}
+
+.view {
+    background-image: url('/src/assets/visibility.svg');
+    background-size: 100% 100%;
+    width: 30px;
+    height: 30px;
+    background-color: #f0f8ff00;
+    cursor: pointer;
+    filter: brightness(0.1);
+}
+
+.edit {
+  background-image: url('/src/assets/edit.svg');
+  background-size: 100% 100%;
+  width: 30px;
+  height: 30px;
+  background-color: #f0f8ff00;
+  cursor: pointer;
+  filter: brightness(0.1);
+}
+
+.delete {
+  background-image: url('/src/assets/delete.svg');
+  background-size: 100% 100%;
+  width: 30px;
+  height: 30px;
+  background-color: #f0f8ff00;
+  cursor: pointer;
+  filter: brightness(0.1);
+}
+
+.chiudi {
+  background-image: url('/src/assets/close.svg');
+  background-size: 100% 100%;
+  width: 30px;
+  height: 30px;
+  background-color: #f0f8ff00;
+  cursor: pointer;
+  border: 0px;
+}
+
+.salva {
+  background-image: url('/src/assets/save.svg');
+  background-size: 100% 100%;
+  width: 30px;
+  height: 30px;
+  background-color: #f0f8ff00;
+  cursor: pointer;
+  border: 0px;
+}
+
+.infoBase {
+  display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.primaRiga, .secondaRiga {
+  display: flex;
+    column-gap: 1rem;
+}
+
+.primaRiga > input {
+  flex: 1;
+  height: 20px;
+  font-size: 1.2rem;
+  padding: 5px 10px;
+  border-radius: 8px;
+  border: 1px solid black;
+}
+
+.secondaRiga > input {
+  flex: 1;
+  height: 20px;
+  font-size: 1.2rem;
+  padding: 5px 10px;
+  border-radius: 8px;
+  border: 1px solid black;
+}
+
+.primaRiga > label {
+  flex: 1;
+  font-size: 1.1rem;
+  display: flex;
+  column-gap: 1rem;
+  align-items: center;
+}
+
+.secondaRiga > label {
+  flex: 1;
+  font-size: 1.1rem;
+  display: flex;
+  column-gap: 1rem;
+  align-items: center;
+}
