--- a/src/App.css
+++ b/src/App.css
@@ -41,10 +41,18 @@
   color: #888;
 }
 
+button {
+  height: 25px;
+    border-radius: 8px;
+    border: 1px solid black;
+    cursor: pointer;
+}
+
 .contenitore {
   padding: 1rem;
   height: 100%;
   min-height: 100vh;
+  background-color: #d7d7d7;
 }
 
 .searchbox {
@@ -62,12 +70,13 @@
   top: 110px;
   background-size: 100% 100%;
   height: 40px;
-  width: 40px;
+  width: 50px;
   border: 0px;
   padding: 0px;
-  background-color: #f5deb300;
+  background-color: #ffffff;
   cursor: pointer;
   background-image: url('/src/assets/person_add.svg');
+  z-index: 5;
 }
 
 .add:hover {
@@ -77,10 +86,16 @@
 .contenuto {
   padding: 1rem 0.5rem;
   margin-top: 2rem;
-  border: 1px solid black;
+  
   border-radius: 16px;
   display: flex;
   flex-direction: column;
+  background-color: white;
+}
+
+.secondaRiga > textarea {
+  width: 100%;
+  height: 150px;
 }
 
 .popup {
@@ -88,7 +103,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   background: rgba(0, 0, 0, 0.6);
   display: flex;
   justify-content: center;
@@ -134,6 +149,7 @@
   align-items: center;
   margin: 5px 0px;
   font-weight: 500;
+  border-radius: 8px;
 }
 
 .ams-bg {
@@ -146,19 +162,27 @@
   color: black; 
 }
 
+h4 {
+  margin: 0;
+}
+
 .elemento {
   flex: 1;
-    font-size: 1.3rem;
-    padding: 0;
-    border: 0;
-    text-align: center;
+  font-size: 1.1rem;
+  padding-left: 10px;
+  border: 0;
+}
+
+.elementoV {
+  flex: 1;
+  font-size: 1rem;
+  padding-left: 10px;
+  border: 0;
 }
 
 .buttons {
   display: flex;
-    position: fixed;
-    right: 35px;
-    width: 100px;
+  width: 100px;
     column-gap: 10px;
 }
 
@@ -215,9 +239,9 @@
 .infoBase {
   display: flex;
     flex-direction: column;
-    gap: 1rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    gap: 0.6rem;
+    margin-top: 0.7rem;
+    margin-bottom: 0.7rem;
 }
 
 .primaRiga, .secondaRiga {
@@ -227,20 +251,18 @@
 
 .primaRiga > input {
   flex: 1;
-  height: 20px;
-  font-size: 1.2rem;
-  padding: 5px 10px;
-  border-radius: 8px;
-  border: 1px solid black;
+    height: 20px;
+    padding: 3px 6px;
+    border-radius: 8px;
+    border: 1px solid black;
 }
 
 .secondaRiga > input {
   flex: 1;
-  height: 20px;
-  font-size: 1.2rem;
-  padding: 5px 10px;
-  border-radius: 8px;
-  border: 1px solid black;
+    height: 20px;
+    padding: 3px 6px;
+    border-radius: 8px;
+    border: 1px solid black;
 }
 
 .primaRiga > label {
@@ -257,4 +279,38 @@
   display: flex;
   column-gap: 1rem;
   align-items: center;
+}
+
+.buttonsForm {
+  display: flex;
+  justify-content: space-between;
+}
+
+.rigaDropDown {
+  display: flex;
+      justify-content: space-between;
+      align-items: center;
+      list-style: none;
+      border-radius: 16px;
+      backdrop-filter: blur(15px);
+      padding: 0rem 1rem;
+      letter-spacing: 2px;
+      margin-bottom: 10px;
+}
+
+.aperto {
+  background-image: url('/src/assets/up.svg');
+  background-size: 100% 100%;
+  height: 50px;
+  width: 50px;
+  border-radius: 16px;
+}
+
+.chiuso {
+  background-image: url('/src/assets/up.svg');
+  background-size: 100% 100%;
+  transform: rotate(180deg);
+  height: 50px;
+  width: 50px;
+  border-radius: 16px;
 }
