--- a/src/moduliCSS/Navbar.module.css
+++ b/src/moduliCSS/Navbar.module.css
@@ -4,7 +4,7 @@ nav {
     justify-content: space-evenly;
     padding: 0rem 1rem;
     column-gap: 2rem;
-    background: linear-gradient(269deg, rgb(255 236 12), rgb(0 0 0 / 50%) 50%, rgb(15 77 161 / 90%) 100%);
+    background-color:black;
 }
 
 .titolo {
