--- a/src/App.css
+++ b/src/App.css
@@ -267,22 +267,6 @@ h4 {
       margin-bottom: 10px;
 }
 
-.aperto {
-  background-image: url('/src/assets/up.svg');
-  background-size: 100% 100%;
-  height: 50px;
-  width: 50px;
-  border-radius: 16px;
-}
-
-.chiuso {
-  background-image: url('/src/assets/up.svg');
-  background-size: 100% 100%;
-  transform: rotate(180deg);
-  height: 50px;
-  width: 50px;
-  border-radius: 16px;
-}
 
 
 /* Overlay per lo sfondo */
@@ -366,4 +350,36 @@ textarea {
     flex-direction: column;
     gap: 10px;
   }
+}
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.popup {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.popup button {
+  margin: 10px;
+}
+
+.labels {
+  display: flex;
+  align-items: center;
+  margin: 5px;
+  column-gap: 1rem;
 }
